[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_BodyBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/CommonTextures/CT_ConnectionHide_Pic.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://TowerRelated/Color_Green/Blossom/AbilityPanel/Blossom_InfoPanel.gd" type="Script" id=6]

[node name="Blossom_InfoPanel" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 6 )

[node name="VBoxContainer" parent="." index="0"]
margin_bottom = 56.0
size_flags_horizontal = 6

[node name="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer" index="1"]
margin_left = 11.0
margin_right = 39.0

[node name="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer" index="0"]
margin_right = 28.0
text = "Blossom"

[node name="BodyMarginer" parent="VBoxContainer" index="2"]
margin_bottom = 55.0

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 110.0
margin_bottom = 41.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="VBoxContainer/BodyMarginer" index="1"]
margin_left = 3.0
margin_right = 107.0
margin_bottom = 41.0
size_flags_horizontal = 6
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/ContentMarginer" index="0"]
margin_left = 3.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 38.0
size_flags_horizontal = 6

[node name="AssignPartnerButton" parent="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer" index="0" instance=ExtResource( 3 )]
destroy_button_if_ability_lost = false

[node name="ShowConnectionButton" parent="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer" index="1" instance=ExtResource( 5 )]
margin_left = 39.0
margin_right = 59.0
margin_bottom = 35.0
texture_normal = ExtResource( 4 )

[node name="UnassignPartnerButton" parent="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer" index="2" instance=ExtResource( 3 )]
margin_left = 63.0
margin_right = 98.0
destroy_button_if_ability_lost = false

[node name="BottomBorder" parent="VBoxContainer" index="3"]
margin_top = 55.0
margin_bottom = 56.0
[connection signal="pressed_mouse_event" from="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer/ShowConnectionButton" to="." method="_on_ShowConnectionButton_pressed_mouse_event"]
